[gd_scene load_steps=2 format=3 uid="uid://b0313gkxna1hi"]

[ext_resource type="Script" uid="uid://bstscr0gdiy0v" path="res://settings_tabs.gd" id="1_e6ent"]

[node name="Settings Tabs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6ent")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
current_tab = 1

[node name="Video" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 250
alignment = 1

[node name="Fullscreen" type="Label" parent="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer/Fullscreen"]
layout_mode = 0
offset_left = 284.0
offset_top = -3.0
offset_right = 328.0
offset_bottom = 21.0
scale = Vector2(3, 3)

[node name="Resolution" type="Label" parent="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer/Resolution"]
layout_mode = 0
offset_left = 248.0
offset_top = 23.0
offset_right = 280.0
offset_bottom = 43.0
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1280 x 1080"
popup/item_2/id = 2

[node name="Test" type="Label" parent="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Test"

[node name="TestButton" type="Button" parent="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer/Test"]
layout_mode = 0
offset_left = 143.0
offset_top = 5.0
offset_right = 184.0
offset_bottom = 36.0
scale = Vector2(2, 2)
text = "Test"

[node name="Audio" type="TabBar" parent="MarginContainer/TabContainer"]
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Master V" type="Label" parent="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Master Volume"

[node name="Master Volume" type="HSlider" parent="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="SFX V" type="Label" parent="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sound Effects Volume"

[node name="SFX Volume" type="HSlider" parent="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="Music V" type="Label" parent="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="Music Volume" type="HSlider" parent="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="Controls" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Controls/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="Movement" type="Label" parent="MarginContainer/TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Movement Controls"

[node name="Sail CC" type="Label" parent="MarginContainer/TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Turn Sail Counterclockwise"

[node name="Sail C" type="Label" parent="MarginContainer/TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Turn Sail Clockwise"

[node name="Interact" type="Label" parent="MarginContainer/TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Interact"

[connection signal="toggled" from="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer/Fullscreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer/Resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/TabContainer/Video/MarginContainer/VBoxContainer/Test/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Audio/MarginContainer/VBoxContainer/Music Volume" to="." method="_on_music_volume_value_changed"]
